--- a/Personal Portfolio/styles.css
+++ b/Personal Portfolio/styles.css
@@ -305,7 +305,16 @@ footer {
   }
 }
 @media (orientation: landscape) {
+    html {
+    width: 110vw;
+  }
     body {
+    width: 110vw;
+  }
+    header {
+    width: 110vw;
+  }
+    #navbar {
     width: 110vw;
   }
 }
